--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_vlc_player: ^7.4.0
+  network_logger: ^1.0.4
+  dio: ^5.4.0
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
